--- a/tooling/package.json
+++ b/tooling/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "npm run build && echo \"\" > ../docs/.nojekyll --env NODE_BUILD=build"
+
   },
   "dependencies": {
     "@types/node": "20.5.9",
